--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "react": "^15.3.1",
+    "react-addons-css-transition-group": "^15.3.1",
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.1"
   },
