--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^15.3.1",
     "react-addons-css-transition-group": "^15.3.1",
     "react-bootstrap": "^0.30.3",
-    "react-dom": "^15.3.1"
+    "react-dom": "^15.3.1",
+    "react-router": "^2.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
