--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "firebase": "^3.4.1",
     "lodash": "^4.15.0",
     "react": "^15.3.1",
     "react-addons-css-transition-group": "^15.3.1",
