--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^15.3.1",
     "react-addons-css-transition-group": "^15.3.1",
     "react-bootstrap": "^0.30.3",
+    "react-color": "^2.3.2",
     "react-dom": "^15.3.1",
     "react-dropzone": "^3.6.0",
     "react-router": "^2.8.1"
